--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,136 +2,132 @@ html {
   font-size: 18px;
 }
 
-div {
-  display: block;
-}
-
-body {
-  margin: 0;
-  width: 960px;
-  font-size: 16px;
-}
-
-.company .image-content {
-  height: 1.5rem;
-
-
-}
-
 .container {
   max-width: 960px;
   margin: 0 auto;
 }
 
+
 .company .container {
   display: flex;
-  align-items: center;
   background-color: black;
   color: white;
-  font-size: 1rem;
-  font-family: Helvetica, sans-serif;
-  padding-bottom: 0.66rem;
-  padding-top: 0.66rem;
-  padding-left: 0.5rem;
+  align-items: center;
 }
 
 .company .container img {
-  height: 1.5rem;
+  height: 1.25rem;
   padding-left: 0.5rem;
   padding-right: 1rem;
 }
 
-.headline {
-  background-color: black;
-  background-size: cover;
-  color: white;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  padding-left: 3rem;
-  width: 20rem;
-  font-family: Helvetica, sans-serif;
-  margin-top: 9rem;
-  align-items: center;
+.company .container span {
+  padding: 0.66rem 0;
 }
 
-h4 {
-  font-size: 1rem;
-  font-weight: bold;
+body {
+  font-family: Helvetica, sans-serif;
+}
+
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("./resources/moto.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 25rem;
+}
+
+.main-title {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  color: white;
+  width: 20rem;
+  height: 6.5rem;
+  padding-left: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  margin-top: 9rem;
+
 }
 
 h1 {
-  padding-top: 0.25rem;
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
-.main-banner {
-  background-image: url("../moto.jpeg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 25rem;
-  font-size: 16px;
-  color: white;
-  max-width: 960px;
+h4 {
+  font-size: 2rem;
+  margin-top: 0.25rem;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
-  color: white;
-  font-family: Helvetica, sans-serif;
   background-color: firebrick;
-  padding-left: 6rem;
-  padding-right: 6rem;
-  }
-
-nav span {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-
+  color: white;
+  padding: 0.75rem 3rem;
+  align-items: center;
 }
 
 .products {
   display: flex;
   justify-content: space-between;
-  margin: 3rem 0 0 0;
+  margin: 3rem 2rem 0 2rem;
 }
 
 .product {
   width: 30%;
 }
 
-.prodspan {
-  display: block;
-  font-family: Helvetica, sans-serif;
-  text-align: center;
-  color: white;
-  background: black;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .product-image {
   border: 4px solid black;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  display: flex;
   height: 9rem;
   padding: 2rem 0;
-
-  img {
-    border-style: none;
-  }
-
-.foot {
-  display: flex;
 }
 
-.info .location {
-    font-family: Helvetica;
-    background-color: black;
+.product-image img {
+  max-width: 8rem;
+}
 
-  }
+.prodspan {
+  display: block;
+  font-family: Helvetica;
+  color: white;
+  background-color: black;
+  text-align: center;
+  padding: 0.5em 0;
+}
+
+.footel {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+}
+
+.footbox {
+  display: flex;
+  flex-direction: column;
+  width: 35%;
+}
+
+.label {
+  background-color: black;
+  color: white;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+  margin-bottom: .5rem;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 5rem 0;
+}
